022-final-visual-fixes - Because we need to lower the icon size on mobile

--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -570,8 +570,6 @@
 	.ttm_single_image-wrapper.after-border.style3:before,
 	.ttm_single_image-wrapper.after-border.style3:after{position: unset;}
 
-	/* featured-icon-box */
-	.featured-icon-box.left-icon.style7 { padding: 30px 15px 30px 15px;}
 
 	/* ttm-header-style-05 */
 	.ttm-header-style-05 .widget-left, 
